# lightning_localization

./: CMakeLists.txt  README.md  README_ZH.md  package.xml
cmake/: packages.cmake
config/: default.yaml  default_livox.yaml  default_nclt.yaml  default_robosense.yaml  default_utbm.yaml  default_vbr.yaml
docs/: architecture.md  architecture_ZH.md  config-parameters.md  config-parameters_ZH.md  configuration-parameters.md  configuration-parameters_ZH.md  file-migration-table.md  file-migration-table_ZH.md  industrial-product-gap-analysis.md  initialization-source-design.md  input-output-spec.md  input-output-spec_ZH.md  io-spec.md  localization-audit-final-report.md  localization-deep-audit.md  localization-dependency-graph.md  localization-dependency-graph_ZH.md  localization-technical-route-and-algorithms.md  manual-ros2-validation.md  manual-ros2-validation_ZH.md  official-issues-and-known-risks.md  risk-register.md  risk-register_ZH.md  ros2-output-topics.md  ros2-output-topics_ZH.md  ros2-topic-publication-audit.md  ros2-topic-publication-audit_ZH.md  rviz2-and-initialization-source-audit.md  rviz2-initialization-enhancement-report.md  rviz2-manual-validation.md  rviz2-visualization-and-initialization.md  stage-one-acceptance-checklist.md  stage-one-acceptance-checklist_ZH.md  stage-one-final-report.md  stage-one-final-report_ZH.md  stage-one-static-audit-report.md  stage-one-static-audit-report_ZH.md  stage-one-topic-output-enhancement-report.md  stage-one-topic-output-enhancement-report_ZH.md  stage-two-industrialization-roadmap.md  (+1 more)
include/: README.md
(+24 files in other folders)
